add subscription model and complete search by title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="http://css-spinners.com/css/spinner/whirly.css" type="text/css">
+  <!-- <link rel="stylesheet" href="http://css-spinners.com/css/spinner/whirly.css" type="text/css"> -->
   <link rel="icon" href="<%= asset_path("favicon.ico") %>" type="image/x-icon">
   <title>breedly</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
