--- a/app/assets/templates/feeds/feed_show.jst.ejs
+++ b/app/assets/templates/feeds/feed_show.jst.ejs
@@ -1,4 +1,5 @@
   <a href="<%= feed.get('url') %>" class="feed-title"><%= feed.get('title') %></a>
+  <button id="add-this-feed-btn" class="btn">Subscribe to this Feed</button>
   <% if (feed && feed.entries) { %>
       <% var activeEntry = feed.entries[feed.get('selectedEntryIdx')]; %>
         <a class="entry-title" href="<%= activeEntry['url'] %>">
