--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -91,8 +91,12 @@ table td {
   margin-top: 20px;
 }
 
-#user-update .btn:hover, button.add-feed:hover {
+#user-update .btn:hover, button.add-feed:hover, button.subscribe-feed-btn:hover {
   box-shadow: 0 0 10px #AA1111;
+}
+
+button.unsubscribe-feed-btn:hover {
+ box-shadow: 0 0 10px black; 
 }
 
 table tr {
