add user update error messages, start feed scopes, and make search by title jbuilder

--- a/app/assets/templates/users/update.jst.ejs
+++ b/app/assets/templates/users/update.jst.ejs
@@ -1,5 +1,6 @@
 <div class="modal-background"></div>
 <div class="modal-content">
+  <div class="errors"></div>
   <button class="close">&times;</button>
   <h2>Update Your Profile</h2>
   <br>
