--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -95,14 +95,24 @@ table td {
   box-shadow: 0 0 10px #AA1111;
 }
 
+.errors {
+  color: #AA1111;
+}
+
 
 button.toggle-subscribe-btn {
   margin-bottom: 30px;
 }
 
 button.toggle-subscribe-btn.sub.btn, button.btn.find-titled-feed {
-  box-shadow: 0 0 10px rgb(45, 135, 45);
+  box-shadow: 0 0 10px green;
+  border-radius: none;
+  /*border: thin solid green;*/
   background-color: rgba(45, 135, 45, 0.4);
+}
+
+button.btn.find-titled-feed {
+  margin-left: 30px;
 }
 
 button.toggle-subscribe-btn.unsub.btn {
