--- a/app/assets/templates/feeds/feed_desc.jst.ejs
+++ b/app/assets/templates/feeds/feed_desc.jst.ejs
@@ -1,6 +1,6 @@
 <div class="desc-layer-bg"></div>
 <div class="feed-desc">
-  <h2><%= feed.get('title') %></h2>
+  <h2 class="feed-title"><%= feed.get('title') %></h2>
   <h3><%= feed.get('description') %></h3>
     <% var topics = feed.topics(); %>
     <h4>Topics</h4>
