--- a/app/assets/templates/topics/new_topic.jst.ejs
+++ b/app/assets/templates/topics/new_topic.jst.ejs
@@ -1,5 +1,5 @@
 <div class="modal-background"></div>
-<div class="modal-content">
+<div class="modal-content china-bg">
   <div class="errors"></div>
   <button class="close">&times;</button>
   <h3>Add A New Interest</h3>
