--- a/app/assets/templates/users/update.jst.ejs
+++ b/app/assets/templates/users/update.jst.ejs
@@ -1,5 +1,5 @@
 <div class="modal-background"></div>
-<div class="modal-content">
+<div class="modal-content feathered-bg">
   <div class="errors"></div>
   <button class="close">&times;</button>
   <h2>Update Your Profile</h2>
@@ -27,7 +27,6 @@
           <td><input id="age_max" type="number" name="user[age_max]" value="<%= user.get('age_max') %>"></td>
         </tr>
       </table>
-      <button class="btn" id="submit-update">Update</button>
+      <button class="btn green" id="submit-update">Update</button>
     </form>
-    <br>
 </div>
