--- a/app/assets/templates/feeds/new_feed.jst.ejs
+++ b/app/assets/templates/feeds/new_feed.jst.ejs
@@ -1,5 +1,5 @@
 <div class="modal-background"></div>
-<div class="modal-content">
+<div class="modal-content symphony-bg">
   <div class="errors"></div>
   <button class="close">&times;</button>
   <h3>Add A New Feed</h3>
