--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,9 @@
   <link rel="icon" href="<%= asset_path("favicon.ico") %>" type="image/x-icon">
   <title>breedly</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= stylesheet_link_tag    'whirly', media: 'all' %>
   <%= stylesheet_link_tag    'jquery-ui.min', media: 'all' %>
-  <%= stylesheet_link_tag    'jquery-ui.structure.min', media: 'all' %>
-  <%= stylesheet_link_tag    'jquery-ui.theme.min', media: 'all' %>
+ 
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
