--- a/app/assets/templates/feeds/feed_search.jst.ejs
+++ b/app/assets/templates/feeds/feed_search.jst.ejs
@@ -8,7 +8,7 @@
     <form id="feed-search-form">
       <label for="feed-title">Search by title:</label>
       <input id="feed-title" type="text" name="feed[title]">
-      <button class="btn find-titled-feed">Find it.</button>
+      <button class="btn find-titled-feed green">Show me.</button>
       <br><br>
       <h4>Include:</h4>
       <br>
