--- a/app/assets/templates/feeds/new_feed.jst.ejs
+++ b/app/assets/templates/feeds/new_feed.jst.ejs
@@ -7,7 +7,7 @@
   <div class="new-feed-block">
     <label for="feed-url">Feed url:</label>
     <input id="feed-url" type="text" name="feed[url]">
-    <button class="btn add-feed">Submit!</button>
+    <button class="btn green add-feed">Submit!</button>
   </div>
   <br>
 </div>
