--- a/app/assets/templates/feeds/feed_show.jst.ejs
+++ b/app/assets/templates/feeds/feed_show.jst.ejs
@@ -1,9 +1,9 @@
   <a href="<%= feed.get('url') %>" class="feed-title"><%= feed.get('title') %></a>
   
     <% if (feed.get('subscribed') === "subscribed") { %>
-      <button class="toggle-subscribe-btn unsub btn">Unsubscribe</button>
+      <button class="toggle-subscribe-btn red btn">Unsubscribe</button>
     <% } else { %>
-      <button class="toggle-subscribe-btn sub btn">Subscribe</button>
+      <button class="toggle-subscribe-btn green btn">Subscribe</button>
     <% } %>
   <% if (feed && feed.entries) { %>
       <% var activeEntry = feed.entries[feed.get('selectedEntryIdx')]; %>
