--- a/app/assets/templates/topics/new_topic.jst.ejs
+++ b/app/assets/templates/topics/new_topic.jst.ejs
@@ -8,7 +8,7 @@
     <div class="new-topic-block">
       <label for="topic-title">I want to see more:</label>
       <input id="topic-title" type="text" name="topic[title]">
-      <button class="btn add-user-topic">Submit!</button>
+      <button class="btn green add-user-topic">Submit!</button>
     </div>
   </div>
 </div>
