--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <div class="auth-screen">
   <%= render 'shared/user_form', action: users_url, user: @user %>
   <%= link_to '(Or Sign In)', new_session_url %>
+  <%= render 'shared/guest_login' %>
 </div>
