--- a/app/assets/templates/users/update.jst.ejs
+++ b/app/assets/templates/users/update.jst.ejs
@@ -29,4 +29,10 @@
       </table>
       <button class="btn green" id="submit-update">Update</button>
     </form>
+
+  <div class="new-feed-block">
+    <label for="feed-url"><h3>Or add your personal feed:</h3></label>
+    <input id="feed-url" type="text" name="feed[url]">
+    <button class="btn green add-feed">Submit!</button>
+  </div>
 </div>
