--- a/app/assets/templates/navbar.jst.ejs
+++ b/app/assets/templates/navbar.jst.ejs
@@ -1,5 +1,5 @@
 <button id="logout-btn" class="btn nav-btn">Log Out</button>
-<button id="add-feed-btn" class="btn nav-btn">Add a Feed</button>
+<button id="add-feed-btn" class="btn nav-btn">Add a Public Feed</button>
 <button id="user-topic-btn" class="btn nav-btn">Add an Interest</button>
 <button id="feed-search-btn" class="btn nav-btn">Search for a Feed</button>
 <button id="update-user-btn" class="btn nav-btn">Update my Profile</button>
