--- a/app/assets/templates/root.jst.ejs
+++ b/app/assets/templates/root.jst.ejs
@@ -7,7 +7,7 @@
 <div id="main-container">
   <div id="errors-main"></div>
   <div id="success-main"></div>
-  <div id="whirly"></div>
+  <div class="whirly"></div>
   <div id="main-content"></div>
 </div>
 
