move user update extend modalView

--- a/app/assets/templates/feeds/new_public_feed.jst.ejs
+++ b/app/assets/templates/feeds/new_public_feed.jst.ejs
@@ -1,6 +1,6 @@
 <div class="modal-background"></div>
 <div class="modal-content symphony-bg">
-  <div class="errors"></div>
+  <div class="errors"><ul></ul></div>
   <div class="whirly"></div>
   <button class="close">&times;</button>
   <h3>Add A Public Feed</h3>
