--- a/app/assets/templates/users/update.jst.ejs
+++ b/app/assets/templates/users/update.jst.ejs
@@ -1,6 +1,6 @@
 <div class="modal-background"></div>
 <div class="modal-content feathered-bg">
-  <div class="errors"></div>
+  <div class="errors"><ul></ul></div>
   <button class="close">&times;</button>
   <h2>Update Your Profile</h2>
   <br>
