create template wrapper for modal view and use postInitialize to add to init

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -368,7 +368,7 @@ h4 {
 
 
 /* modals */
-.modal-background {
+.modal-bg {
   background-color: rgba(235, 235, 235, 0.8); 
   position: fixed;
   top:0;
