--- a/app/assets/templates/feeds/feed_search.jst.ejs
+++ b/app/assets/templates/feeds/feed_search.jst.ejs
@@ -1,6 +1,6 @@
 <div class="modal-background"></div>
 <div class="modal-content symphony-bg">
-  <div class="errors"></div>
+  <div class="errors"><ul></ul></div>
   <button class="close">&times;</button>
   <h3>Find Your Next Feed</h3>
   <br>
