--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -369,7 +369,7 @@ h4 {
 
 /* modals */
 .modal-bg {
-  background-color: rgba(235, 235, 235, 0.8); 
+  background-color: rgba(40, 40, 40, 0.7); 
   position: fixed;
   top:0;
   bottom:0;
@@ -502,6 +502,10 @@ h4 {
 .errors li {
   color: #AA1111;
   display: inherit
+}
+
+button.btn.attempt-destroy-btn, button.btn.delete-btn {
+  margin: 30px;
 }
 
 .feathered-bg {
