--- a/app/assets/templates/feeds/new_public_feed.jst.ejs
+++ b/app/assets/templates/feeds/new_public_feed.jst.ejs
@@ -1,6 +1,6 @@
 <h3>Add A Public Feed</h3>
 <br>
-<div class="new-feed-block">
+<div class="new-feed-block centered">
   <label for="public-feed-url">Feed url:</label>
   <input id="public-feed-url" type="text" name="feed[url]">
   <button class="btn green add-public-feed">Submit!</button>
