--- a/app/views/shared/_guest_login.html.erb
+++ b/app/views/shared/_guest_login.html.erb
@@ -1,7 +1,9 @@
+<div class="auth-div">
 <form class="guest-hidden" action="<%= session_url %>" method="POST">
-  <p style="color:#A11111">Just wanna look around?</p>
   <%= csrf_tag %>
+  <p>Just wanna look around?</p>
   <input type="hidden" name="user[username]" value="Guest">
   <input type="hidden" name="user[password]" value="guest_login">
-  <input class="btn auth-btn guest-btn" style="color:black" type="submit" value="Be my guest.">
+  <input class="btn guest-btn" type="submit" value="Be my guest.">
 </form>
+</div>
